--- a/control_systems/control_systems.tex
+++ b/control_systems/control_systems.tex
@@ -3,16 +3,16 @@
 \chapter{Control systems}
 \label{chap:control_systems}
 
-    \section{Cascaded \gls{PID}}
+    \section{Cascaded PID}
 
         Control system design
         Slower for less swing angles
 
-    \section{\gls{LQR}}
+    \section{LQR}
 
         Anton and Francois stuff
 
-    \section{\gls{MPC}}
+    \section{MPC}
 
         MATLAB
         QP solver
