Improved formatting of list of abreviations and readded list of figures and tables

--- a/frontmatter/symbols.tex
+++ b/frontmatter/symbols.tex
@@ -1,8 +1,5 @@
-\chapter*{Nomenclature\markboth{}{Nomenclature}}
-\addcontentsline{toc}{chapter}{Nomenclature}
-
-% \vspace*{-3mm}
-\subsubsection*{Variables and functions}
+\chapter*{List of symbols\markboth{}{List of symbols}}
+\addcontentsline{toc}{chapter}{List of symbols}
 
 \begingroup
 \renewcommand{\arraystretch}{1.2}
@@ -30,34 +27,6 @@
 \end{tabularx}
 \endgroup
 
-
 \newpage
-\subsubsection*{Acronyms and abbreviations}
 
-\begingroup
-\renewcommand{\arraystretch}{1.2}
-\begin{tabular}{@{}p{2.5cm} l}
-    AE      & Afrikaans English \\
-    AID     & accent identification \\
-    ASR     & automatic speech recognition \\
-    AST     & African Speech Technology \\
-    CE      & Cape Flats English \\
-    DCD     & dialect-context-dependent \\
-    DNN		& deep neural network \\
-    G2P     & grapheme-to-phoneme \\
-    GMM     & Gaussian mixture model \\
-    HMM     & hidden Markov model \\
-    HTK     & Hidden Markov Model Toolkit \\
-    IE      & Indian South African English \\
-    IPA     & International Phonetic Alphabet \\
-    LM      & language model \\
-    LMS     & language model scaling factor \\
-    MFCC    & Mel-frequency cepstral coefficient \\
-    MLLR    & maximum likelihood linear regression \\
-    OOV     & out-of-vocabulary \\
-    PD      & pronunciation dictionary \\
-    PDF     & probability density function \\
-    SAE     & South African English \\
-    SAMPA   & Speech Assessment Methods Phonetic Alphabet \\
-\end{tabular}
-\endgroup
+
