Added plots for cable length estimation error for single pendulum

--- a/frontmatter/symbols.tex
+++ b/frontmatter/symbols.tex
@@ -1,5 +1,5 @@
-\chapter*{List of symbols\markboth{}{List of symbols}}
-\addcontentsline{toc}{chapter}{List of symbols}
+\chapter*{Symbols\markboth{}{Symbols}}
+\addcontentsline{toc}{chapter}{Symbols}
 
 \begingroup
 \renewcommand{\arraystretch}{1.2}
