--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -4,7 +4,7 @@
 \label{chap:introduction}
 
 \section{Background}
-\section{Project Definition and Objectives}
-\section{Thesis Outline}
+\section{Project definition and objectives}
+\section{Thesis outline}
 
 
